logo position and negative z-index no longer declared and not obscured. 10% background exposed when mobile nav opened.

--- a/src/global.css
+++ b/src/global.css
@@ -119,11 +119,9 @@ td {
   justify-items: center;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 0.15rem;
-  position: absolute;
   top: 7px;
   left: 0;
   right: 0;
-  z-index: -1;
 }
 .nav-margin {
   margin-top: var(--header-height);
@@ -393,7 +391,7 @@ cite {
   .primary-navigation {
     position: fixed;
     z-index: 1000;
-    inset: 0 20% 0 0;
+    inset: 0 10% 0 0;
     flex-direction: column;
     padding: min(16vh, 8rem) 1.8em;
     transform: translateX(-100%);
